----------------------------
- Fixed issue #38: CHtml links and buttons don't work when they are updated via ajax (Qiang)
- Fixed issue #41: missing function CHttpRequest:: getCsrfTokenFromCookie() (Qiang)
- Fixed issue #42: Wrong links in crud generated admin view (Qiang)
- Fixed issue #45: Many-to-many relation does not work when both foreign tables are the same (Qiang)
- Fixed issue #48: Typo in CActiveRecord::setAttribute (Qiang)
- Fixed issue #49: Invalid markup generated by yiic tool (Qiang)
- Fixed issue #53: tabular form input causes AR to fail (Qiang)
- Fixed issue #54: typoe in CHtml::listOptions (Qiang)
- Fixed inaccurate error message when adding an item as a child of itself in CAuthManager (Qiang)
- Added CHtml::activeId and CHtml::activeName (Qiang)
- Added German and Spanish core message translations (mikl, sebas)

Version 1.0 December 3, 2008
----------------------------
- Added CTabView (Qiang)
- Added CStarRating (Qiang)
- Added CUploadedFile (Qiang)
- Added CFileValidator (Qiang)
- Added CActiveRecord::safeAttributes (Qiang)
- Added hashByName option to asset manager (Qiang)
- Added CHtml::openTag and CHtml::closeTag (Qiang)
- Added CHtml::activeFileField (Qiang)
- Added CFileHelper::getMimeType and CFileHelper::getMimeTypeByExtension (Qiang)
- Added COutputCache::varyByRoute (Qiang)
- Added 'params' to HTML options that are used in CHtml methods (Qiang)
- Added CDbConnection::emulatePrepare (Qiang)
- Added CWebApplication::clientScript and removed CController::clientScript (Qiang)
- Added roles support to CAccessControlFilter (Qiang)
- Added cross-site request forgery prevention (Wei, Qiang)
- Added CPagination.route (Qiang)
- Refactored UserIdentity generated by yiic webapp (Qiang)
- Refactored CLinkPager (Qiang)
- Refactored CFilter (Qiang)
- Removed CClientScript::registerBodyScript and CClientScript::registerBodyScriptFile;
  Added a position parameter to CClientScript::registerScript and CClientScript::registerScriptFile (Qiang)