@@ -8,6 +8,7 @@ Version 1.0.1 to be released
 - Fixed issue #41: missing function CHttpRequest:: getCsrfTokenFromCookie() (Qiang)
 - Fixed issue #42: Wrong links in crud generated admin view (Qiang)
 - Fixed issue #45: Many-to-many relation does not work when both foreign tables are the same (Qiang)
+- Fixed issue #47: Wrong url parsing when CUrlManager is set in path format (Qiang)
 - Fixed issue #48: Typo in CActiveRecord::setAttribute (Qiang)
 - Fixed issue #49: Invalid markup generated by yiic tool (Qiang)
 - Fixed issue #53: tabular form input causes AR to fail (Qiang)
